GoalTracker/force-app/main/default/objects/Contact_Vip__mdt/Contact_Vip__mdt.object-meta.xml
<CustomObject>
    <description>Settings related to setting the VIP indicator of a Contact</description>
    <label>Contact VIP Setting</label>
    <pluralLabel>Contact VIP Settings</pluralLabel>
</CustomObject>