GoalTracker/force-app/main/default/objects/Contact_Vip__mdt/fields/Large_Commitment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Large_Commitment_Amount__c</fullName>
    <label>Large Commitment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>