GoalTracker/force-app/main/default/objects/Contact_Vip__mdt/fields/Leadership_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Campaign_Id__c</fullName>
    <label>Leadership Campaign Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>