GoalTracker/force-app/main/default/objects/Contact_Vip__mdt/fields/Vip_Prospect_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Vip_Prospect_Manager_Id__c</fullName>
    <label>VIP Prospect Manager Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>